# meshia-vara-hackathon

./: .env  Cargo.toml  README.md  main.py  quiz.circom
src/: lib.rs
